network/argocd-service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
    service-group: management
  name: argocd-server-exposed
  namespace: argocd
spec:
  allocateLoadBalancerNodePorts: true
  ports:
  - name: http
    nodePort: 32393
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    nodePort: 31267
    port: 443
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/name: argocd-server
  sessionAffinity: None
  type: LoadBalancer
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    mgt-gateway-access: "true"
    name: argocd
