network/woodpecker-route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: woodpecker-route
  namespace: woodpecker
spec:
  parentRefs:
  - name: homelab-gateway
    sectionName: https
    namespace: gateway
  hostnames:
  - "woodpecker.nauvis.lan" 
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: woodpecker-ci-server
      port: 80
